# userbot_telegram_sender

./: .gitignore  README.md  broadcast.example.yml  build-macos.sh  build-windows-debug.bat  build-windows.bat  pyproject.toml  run-desktop.sh  run-ui.sh
src/tg_spam/: __init__.py  admin_filter.py  browser_app.py  cli.py  config.py  desktop.py  log_store.py  paths.py  sender.py  service.py  settings_store.py  tg_auth.py  ui_app.py
src/tg_spam/web/: app.js  index.html  manifest.webmanifest  styles.css
